kube-manifests/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-app-deployment
  labels:
    app: vite-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vite-app
  template:
    metadata:
      labels:
        app: vite-app
    spec:
      containers:
      - name: vite-app
        image: 125137910162.dkr.ecr.us-east-1.amazonaws.com/vite-app:vite-app-1.0.45
        ports:
        - containerPort: 8080
          name: vite-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: vite-app-service
  labels:
    app: vite-app
spec:
  type: NodePort
  selector:
    app: vite-app
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 31444
