kube-manifests/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-app-ingress
  labels:
    app: vite-app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: vite-app-alb
    alb.ingress.kubernetes.io/scheme: internet-facing  
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: vite-app-service
      port:
        number: 5173
